<?xml version="1.0" encoding="utf-8"?>
<com.ums.shdep.reward.CustomInsetsRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reward_background"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="35dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/reward_iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/reward_title"
                android:textColor="@color/colorRewardTitle"
                android:textSize="@dimen/reward_title_size" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/reward_iv_icon"
            android:layout_width="@dimen/reward_icon_width"
            android:layout_height="@dimen/reward_icon_height"
            android:layout_marginBottom="@dimen/reward_icon_margin_bottom"
            android:layout_marginTop="@dimen/reward_icon_margin_top"
            android:background="@null"
            android:src="@mipmap/appicon"/>

        <TextView
            android:id="@+id/reward_tv_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/reward_des_margin_top"
            android:gravity="center"
            android:text="@string/reward_app_name"
            android:textStyle="bold"
            android:textColor="@color/colorRewardName"
            android:textSize="@dimen/reward_name_size" />

        <TextView
            android:id="@+id/reward_tv_des"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/reward_des_margin_top"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal|top"
            android:text="您打赏的一小步，是我们进步的一大步( •̀ ω •́ )"
            android:textColor="@color/colorRewardDes"
            android:textSize="@dimen/reward_des_size" />

        <LinearLayout
            android:id="@+id/reward_llayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/reward_amount_margin_top"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_rhombus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/reward_amount_title_margin_lr"
                android:layout_marginRight="@dimen/reward_amount_title_margin_lr"
                android:text="@string/reward_amount_title"
                android:textColor="@color/colorRewardAmount"
                android:textSize="@dimen/reward_amount_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_rhombus" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reward_recyclerView"
            android:layout_width="@dimen/reward_amount_custom_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/reward_amount_margin_bottom"></android.support.v7.widget.RecyclerView>
        <FrameLayout
            android:layout_width="@dimen/reward_amount_custom_width"
            android:layout_height="64dp"
            android:layout_marginTop="@dimen/reward_amount_custom_margin_top">
            <View
                android:layout_width="@dimen/reward_amount_custom_width"
                android:layout_height="@dimen/reward_amount_custom_height"
                android:background="@drawable/layout_bg_round_normal"
                ></View>
            <RelativeLayout
                android:id="@+id/reward_rlayout_amount_custom"
                android:layout_width="@dimen/reward_amount_custom_width"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:text="@string/reward_amount_custom"
                    android:textColor="@color/colorRewardCustomAmount"
                    android:textSize="@dimen/reward_amount_custom_size" />

                <EditText
                    android:id="@+id/reward_et_amount_custom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/reward_tv_amount_custom"
                    android:background="@null"
                    android:inputType="number|numberDecimal"
                    android:maxLength="8"
                    android:singleLine="true"
                    android:paddingBottom="18dp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorRewardCustomAmount"
                    android:textSize="@dimen/reward_amount_custom_size" />

                <TextView
                    android:id="@+id/reward_tv_amount_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="13dp"
                    android:text="元"
                    android:textColor="@color/colorRewardCustomAmount"
                    android:textSize="@dimen/reward_amount_custom_size" />

            </RelativeLayout>

        </FrameLayout>




        <Button
            android:id="@+id/reward_btn"
            android:layout_width="@dimen/reward_btn_width"
            android:layout_height="@dimen/reward_btn_height"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/reward_btn_margin_top"
            android:background="@drawable/btn_bg_round_disable"
            android:clickable="false"
            android:text="@string/reward_btn_name"
            android:textColor="@color/colorRewardBtnName"
            android:textSize="@dimen/reward_btn_size" />

    </LinearLayout>

    </ScrollView>


</com.ums.shdep.reward.CustomInsetsRelativeLayout>